# th1

./: LICENSE  README.md  pyproject.toml
capture/: capture.bak  capture.py  migrate.py
capture/ansible/: capture.yaml  inner.yaml
logs/: README.md  chrome-119.json  chrome-120.json  chrome-123.json  chrome-124.json  chrome120_android.json  parse.py  safari-iOS-17_2.json  safari17_0.json
signatures/: chrome_120_android.yaml  chrome_123.0.6312.124.yaml  chrome_124.0.6367.60.yaml  chrome_99.0.4844.73_android12-pixel6.yaml  safari_15.3_macos11.6.4.yaml
tests/: test_th1.py
th1/: base.py  browser.py
th1/http2/: frames.py  parser.py  signature.py
th1/tls/: extensions.py  parser.py  signature.py  utils.py
